[project]
name = "jito-alerts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ecdsa>=0.19.0",
    "fastapi>=0.115.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "solana>=0.36.1",
    "solders>=0.23.0",
    "uvicorn>=0.32.1",
]
